# egregore

./: .gitignore  README.md  bash.exe.stackdump
backend/: pyproject.toml
backend/benchmarks/html/: failure_0001.html  failure_0002.html  failure_0003.html  failure_0004.html  failure_0005.html  failure_0006.html  failure_0007.html  failure_0008.html  failure_0009.html  failure_0010.html  failure_0011.html  failure_0012.html  failure_0013.html  failure_0014.html  failure_0015.html  failure_0016.html  failure_0017.html  failure_0018.html  failure_0019.html  failure_0020.html  failure_0021.html  failure_0022.html  failure_0023.html  failure_0024.html  failure_0025.html  failure_0026.html  failure_0027.html  failure_0028.html  failure_0029.html  failure_0030.html  failure_0031.html  failure_0032.html  failure_0033.html  failure_0034.html  failure_0035.html  failure_0036.html  failure_0037.html  failure_0038.html  failure_0039.html  failure_0040.html  (+167 more)
backend/benchmarks/reliability/: reliability_20260614_001621.json  reliability_20260614_011029.json
backend/src/egregore/: __main__.py  login.py  sync.py
backend/src/egregore/api/: app.py
backend/src/egregore/cli/: __main__.py  main.py
backend/src/egregore/config/: settings.py
backend/src/egregore/extension/: daemon.py
backend/src/egregore/providers/: base.py  bootstrap.py  browser_manager.py  cdp_transport.py  cookie_sync.py  metrics.py  network_observer.py  transport.py
backend/src/egregore/synthesis/: base.py  noop.py  store.py
backend/src/egregore/topic/: events.py  manager.py  models.py  runtime.py  store.py
backend/tests/: test_browser_runtime.py  test_round_table.py  test_synthesis.py  test_topic.py
backend/tests/chaos/: test_health_state_machine.py  test_recovery.py
docs/: Architecture.md  (+3 more)
(+62 files in other folders)
