[project]
name = "egregore"
version = "0.3.5"
description = "A Topic Runtime for Collective Intelligence"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.0",
    "structlog>=24.4.0",
    "playwright>=1.60.0",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
    "fastapi>=0.137.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/egregore"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
